syntax = "proto3";

option go_package = "github.com/ProtocolScience/AstralGo/client/pb/database";
//统一数据库，因为我觉得gocq那个数据库序列化太抽象了，无法扩展。

message DatabaseRecord{
    DatabaseVideo video = 1;
    DatabaseImage image = 2;
    DataRegister register = 3;
}
message DataRegister{
  uint32 expiredTime = 1;
}
message DatabaseVideo{
  bytes md5 = 1;
  bytes thumbMd5 = 2;
  uint32 size = 3;
  uint32 thumbSize = 4;
  string name = 5;
  bytes uuid = 6;
}
message DatabaseImage{
  bytes md5 = 1;
  bytes sha1 = 5;
  uint32 size = 2;
  string imageId = 3;
  string path = 4;
  string domain = 9;
  string query = 10;
  uint32 width = 6;
  uint32 height = 7;
  uint32 BusinessType = 8;
  uint32 imageType = 11;
  uint32 imageBizType = 12;
}